chore(quality): normalize import ordering in bff sources
OpenRewrite import-order normalization applied by the pre-commit recipe
during D8 verification, touching prior-deliverable bff sources and tests.
No behavioral change.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Af6Ah5SR43Ug7eG9HN1Yyo